Add heroku components

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 	<div class='root' id='root' />
+	<script src="/static/vendor.bundle.js"></script>
 	<script src="/static/bundle.js"></script>
 	</body>
 </html>
