Fix mobile format

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Noah Potter</title>
 		<meta name="viewport" content="width=device-width, user-scalable=no" />
-		<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Bubblegum+Sans|Carter+One|Coiny|Fredoka+One|Oleo+Script+Swash+Caps" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Baloo+Bhaina|Bubblegum+Sans|Carter+One|Coiny|Fredoka+One|Oleo+Script+Swash+Caps" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link rel='icon' href='/public/app_images/favicon.ico'>
 	</head>
